update-merge wallet

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -41,15 +45,15 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')
+        window.jQuery || document.write('<script src="%PUBLIC_URL%/js/jquery-1.10.2.min.js"><\/script>')
     </script>
-    <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/js/jquery-migrate-1.2.1.min.js"></script>
 
-    <script src="js/jquery.flexslider.js"></script>
-    <script src="js/waypoints.js"></script>
-    <script src="js/jquery.fittext.js"></script>
-    <script src="js/magnific-popup.js"></script>
-    <script src="js/init.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.flexslider.js"></script>
+    <script src="%PUBLIC_URL%/js/waypoints.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.fittext.js"></script>
+    <script src="%PUBLIC_URL%/js/magnific-popup.js"></script>
+    <script src="%PUBLIC_URL%/js/init.js"></script>
 </body>
 
 </html>
